--- a/bhanu-prakash.html
+++ b/bhanu-prakash.html
@@ -29,33 +29,37 @@
                                 <tbody>
                                     <tr>
                                         <td>
-                                            <tr>
-                                                <td>
-                                                    <img style="height: 21.6px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/bhanu-prakash/bhanu-prakash.png" alt="">
-                                                </td>
-
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                    <img style="height: 12px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/bhanu-prakash/bhanu-prakash-d.png" alt="">
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>
-                                                    <div>
-                                                        <table>
-                                                            <tr>
-                                                                <td>
-                                                                    <a href="tel:+971507783229" style="margin-right: 5px; "><img src="https://vcantech.github.io/mathello-sign/img/bhanu-prakash/bhanu-prakash-phone.png" style="height: 18px;margin: 0;" alt=""> </a>
-                                                                </td>
-
-                                                            </tr>
-                                                        </table>
-                                                    </div>
-                                                </td>
-                                            </tr>
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td>
+                                            <img style="height: 21.6px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/bhanu-prakash/bhanu-prakash.png" alt="">
+                                        </td>
+
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <img style="height: 12px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/bhanu-prakash/bhanu-prakash-d.png" alt="">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <div>
+                                                <table>
+                                                    <tbody>
+                                                        <tr>
+                                                            <td>
+                                                                <a href="tel:+971507783229" style="margin-right: 5px; "><img src="https://vcantech.github.io/mathello-sign/img/bhanu-prakash/bhanu-prakash-phone.png" style="height: 18px;margin: 0;" alt=""> </a>
+                                                            </td>
+
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </td>
+                                    </tr>
+
+
                                 </tbody>
                             </table>
                         </div>
@@ -67,15 +71,15 @@
                                 <tr>
                                     <td>
                                         <span><a href="https://www.facebook.com/mathellogenius" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height: 22px; margin: 0;"></a></span>
+                                        <img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height: 22px; margin: 0;"></a></span>
                                         <span><a href="https://www.instagram.com/mathellogenius" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height: 22px; margin: 0;"></a></span>
+                                        <img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height: 22px; margin: 0;"></a></span>
                                         <span><a href="https://www.twitter.com/mathellogenius" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height: 22px; margin: 0;"></a></span>
+                                        <img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height: 22px; margin: 0;"></a></span>
                                         <span><a href="https://www.linkedin.com/company/mathello" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height: 22px; margin: 0;"></a></span>
+                                        <img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height: 22px; margin: 0;"></a></span>
                                         <span><a href="https://www.youtube.com/@mathellogenius" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height: 22px; margin: 0;"></a></span>
+                                        <img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height: 22px; margin: 0;"></a></span>
                                     </td>
                                 </tr>
                                 <tr>
@@ -99,22 +103,15 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"> <span><a href="https://wa.me/971509834557" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 14px;margin: 0;" alt=""></a></span></td>
+                        <td style="padding: 0;"> <span><a href="https://wa.me/971509834557"><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 13px;margin: 0;" alt=""></a></span></td>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td style="padding: 0;">
                             <span>
-                                <a href="mailto:hello@mathellogenius.com"><img src="https://vcantech.github.io/mathello-sign/img/bhanu-prakash/bhanu-prakash-email.png" style="height: 17px;margin: 0;" alt=""></a>
-                            </span>
+                            <a href="mailto:hello@mathellogenius.com"><img src="https://vcantech.github.io/mathello-sign/img/bhanu-prakash/bhanu-prakash-email.png" style="height: 13px;margin: 0;" alt=""></a>
+                        </span>
                         </td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -152,8 +149,14 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td style="padding: 0;">
-                            <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 18px;margin-left: 5px;margin: 0;" alt=""></a>
+                            <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 17px;margin-left: 5px;margin: 0;" alt=""></a>
                         </td>
                         <!-- <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/color-box.png" style="height: 28px;" alt=""></td> -->
                     </tr>
@@ -164,3 +167,4 @@
 </body>
 
 </html>
+
