--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -87,9 +87,11 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>
+                                    <!-- <td>
                                         <span style="font-size: 15px; color: #575757;font-family: 'Quicksand', sans-serif;font-weight: 700;">@mathellogenius</span>
-                                    </td>
+                                    </td> -->
+                                    <td><img src="https://vcantech.github.io/mathello-sign/img/@mathellogenius.png" style="    height: 16.5px;" alt=""></td>
+
                                 </tr>
                             </tbody>
                         </table>
@@ -116,6 +118,8 @@
                                 <a href="mailto:hello@mathellogenius.com"><img src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-iyengar-email.png" style="height: 15px;margin: 0;" alt=""></a>
                             </span>
                         </td>
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -147,7 +151,7 @@
                         <td></td>
                         <td></td>
                         <td style="padding: 0;">
-                            <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 18px;margin-left: 5px;margin: 0;" alt=""></a>
+                            <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 13px;margin-left: 5px;margin: 0;" alt=""></a>
                         </td>
                         <!-- <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/color-box.png" style="height: 28px;" alt=""></td> -->
                     </tr>
