--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -12,9 +12,7 @@
 </head>
 
 <body>
-    <style>
 
-    </style>
     <div style="width:800px">
 
         <table class="table" style="min-width:97%;">
@@ -61,38 +59,30 @@
                         </div>
                     </td>
                     <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 56px;margin: 0;" alt=""></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
 
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                     <td></td>
                     <td>
                         <table>
                             <tbody>
 
                                 <tr>
-
                                     <td>
-                                        <span><a href="https://www.facebook.com/mathellogenius" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height: 22px; margin: 0;"></a></span>
-                                        <span><a href="https://www.instagram.com/mathellogenius" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height: 22px; margin: 0;"></a></span>
-                                        <span><a href="https://www.twitter.com/mathellogenius" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height: 22px; margin: 0;"></a></span>
-                                        <span><a href="https://www.linkedin.com/company/mathello" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height: 22px; margin: 0;"></a></span>
-                                        <span><a href="https://www.youtube.com/@mathellogenius" target="_blank">
-                                            <img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height: 22px; margin: 0;"></a></span>
+                                        <span><a style="padding: 0;margin: 0;" href="https://www.facebook.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height:23px;margin:0;"></a></span>
+                                        <span><a style="padding: 0;margin: 0;" href="https://www.instagram.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height:23px;margin:0;"></a></span>
+                                        <span><a style="padding: 0;margin: 0;" href="https://www.twitter.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height:23px;margin:0;"></a></span>
+                                        <span><a style="padding: 0;margin: 0;" href="https://www.linkedin.com/company/mathello" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height:23px;margin:0;"></a></span>
+                                        <span><a style="padding: 0;margin: 0;" href="https://www.youtube.com/@mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height:23px;margin:0;"></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <!-- <td>
                                         <span style="font-size: 15px; color: #575757;font-family: 'Quicksand', sans-serif;font-weight: 700;">@mathellogenius</span>
                                     </td> -->
-                                    <td><img src="https://vcantech.github.io/mathello-sign/img/@mathellogenius.png" style="    height: 15px;" alt=""></td>
+                                    <td><img src="https://vcantech.github.io/mathello-sign/img/@mathellogenius.png" style="    height: 15.15px;" alt=""></td>
 
                                 </tr>
                             </tbody>
@@ -120,7 +110,6 @@
                                 <a href="mailto:sreenevas@ikeneducation.com"><img src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-iyengar-email.png" style="height: 15px;margin: 0;" alt=""></a>
                             </span>
                         </td>
-                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
