--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -18,7 +18,7 @@
         <table class="table" style="min-width:97%;">
             <tbody>
                 <tr>
-                    <td> <img style="height:20px;margin: 0;" src="https://vcantech.github.io/mathello-sign/img/with-regards.png" alt=""></td>
+                    <td> <img style="height:20px;margin: 0;" src="./img/with-regards.png" alt=""></td>
                 </tr>
                 <tr>
                     <td>
@@ -29,13 +29,13 @@
                                         <td>
                                             <tr>
                                                 <td>
-                                                    <img style="height: 21.6px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
+                                                    <img style="height: 21.6px; margin: 0;" src="./img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
                                                 </td>
 
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <img style="height: 14px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar-d.png" alt="">
+                                                    <img style="height: 14px; margin: 0;" src="./img/sreenevas-km-Iyengar/sreenevas-km-Iyengar-d.png" alt="">
                                                 </td>
                                             </tr>
                                             <tr>
@@ -44,7 +44,7 @@
                                                         <table>
                                                             <tr>
                                                                 <td>
-                                                                    <a href="tel:+971507783229" style="margin-right: 5px; "><img src="https://vcantech.github.io/mathello-sign/img/phone.png" style="height: 18px;margin: 0;" alt=""> </a>
+                                                                    <a href="tel:+971507783229" style="margin-right: 5px; "><img src="./img/sreenevas-km-Iyengar/sreenevas-km-Iyengar-phone.png" style="height: 17px;margin: 0;" alt=""> </a>
                                                                 </td>
 
                                                             </tr>
@@ -58,7 +58,7 @@
                             </table>
                         </div>
                     </td>
-                    <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 56px;margin: 0;" alt=""></td>
+                    <td style="padding: 0;"><img src="./img/arrow-design.png" style="height: 56px;margin: 0;" alt=""></td>
 
                     <td></td>
                     <td></td>
@@ -71,24 +71,24 @@
 
                                 <tr>
                                     <td>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.facebook.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height:23px;margin:0;"></a></span>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.instagram.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height:23px;margin:0;"></a></span>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.twitter.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height:23px;margin:0;"></a></span>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.linkedin.com/company/mathello" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height:23px;margin:0;"></a></span>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.youtube.com/@mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height:23px;margin:0;"></a></span>
+                                        <span><a style="padding: 0;margin: 0;" href="https://www.facebook.com/mathellogenius" target="_blank"><img src="./img/facebook.png" alt="" style="height:23px;margin:0;"></a></span>
+                                        <span><a style="padding: 0;margin: 0;" href="https://www.instagram.com/mathellogenius" target="_blank"><img src="./img/instagram.png" alt="" style="height:23px;margin:0;"></a></span>
+                                        <span><a style="padding: 0;margin: 0;" href="https://www.twitter.com/mathellogenius" target="_blank"><img src="./img/twitter.png" alt="" style="height:23px;margin:0;"></a></span>
+                                        <span><a style="padding: 0;margin: 0;" href="https://www.linkedin.com/company/mathello" target="_blank"><img src="./img/linkdin.png" alt="" style="height:23px;margin:0;"></a></span>
+                                        <span><a style="padding: 0;margin: 0;" href="https://www.youtube.com/@mathellogenius" target="_blank"><img src="./img/youtube.png" alt="" style="height:23px;margin:0;"></a></span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <!-- <td>
                                         <span style="font-size: 15px; color: #575757;font-family: 'Quicksand', sans-serif;font-weight: 700;">@mathellogenius</span>
                                     </td> -->
-                                    <td><img src="https://vcantech.github.io/mathello-sign/img/@mathellogenius.png" style="    height: 15.15px;" alt=""></td>
+                                    <td><img src="./img/@mathellogenius.png" style="    height: 15.15px;" alt=""></td>
                                 </tr>
                             </tbody>
                         </table>
                     </td>
                     <td style="border-radius: 1px solid black;">
-                        <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo-line.png" alt="" style="height: 70px;margin: 0;"></a>
+                        <a href="https://mathellogenius.com" target="_blank"><img src="./img/mathello-logo-line.png" alt="" style="height: 70px;margin: 0;"></a>
                     </td>
                 </tr>
             </tbody>
@@ -100,13 +100,13 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"> <span><a href="https://wa.me/971509834557" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 14px;margin: 0;" alt=""></a></span></td>
+                        <td style="padding: 0;"> <span><a href="https://wa.me/971509834557" ><img src="./img/whatsapp.png" style="height: 14px;margin: 0;" alt=""></a></span></td>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td style="padding: 0;">
                             <span>
-                                <a href="mailto:sreenevas@ikeneducation.com"><img src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-iyengar-email.png" style="height: 15px;margin: 0;" alt=""></a>
+                                <a href="mailto:sreenevas@ikeneducation.com"><img src="./img/sreenevas-km-Iyengar/sreenevas-km-iyengar-email.png" style="height: 15px;margin: 0;" alt=""></a>
                             </span>
                         </td>
                         <td></td>
@@ -115,7 +115,7 @@
                         <td></td>
                         <td></td>
                         <td style="padding: 0;">
-                            <img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="height: 25px;margin: 0;" alt="">
+                            <img src="./img/color-box1.png" style="height: 25px;margin: 0;" alt="">
                         </td>
                         <td></td>
                         <td></td>
@@ -141,9 +141,9 @@
                         <td></td>
                         <td></td>
                         <td style="padding: 0;">
-                            <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 13px;margin-left: 5px;margin: 0;" alt=""></a>
+                            <a href="https://mathellogenius.com" target="_blank"><img src="./img/website.png" style="height: 13px;margin-left: 5px;margin: 0;" alt=""></a>
                         </td>
-                        <!-- <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/color-box.png" style="height: 28px;" alt=""></td> -->
+                        <!-- <td style="padding: 0;"><img src="./img/color-box.png" style="height: 28px;" alt=""></td> -->
                     </tr>
                 </tbody>
             </table>
